# barebone-rocket-rs

./: .env.example  Cargo.toml  README.md
migrations/2021-06-07-165139_create_users_table/: up.sql
src/: backend.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs  tokenizer.rs  types.rs
